Cleaned up argLine properties on surefire configs so that the argLine property is only specified once in the top-level POM.